--- a/static/style.css
+++ b/static/style.css
@@ -214,8 +214,8 @@ h2 {
   bottom: 32px;
   left: 50%;
   transform: translateX(-50%);
-  width: 38px;
-  height: 38px;
+  width: 50px;
+  height: 50px;
   border-radius: 9999px;
   border: none;
   background: transparent;
@@ -241,8 +241,8 @@ h2 {
 }
 
 .scroll-down-arrow {
-  font-size: 18px;
-  line-height: 1;
   display: block;
-  transform: scaleX(0.85) scaleY(1.35);
+  width: auto;
+  height: 4px;
+  transform: rotate(90deg);
 }
