--- a/lab/cooking_chart/templates/index.html
+++ b/lab/cooking_chart/templates/index.html
@@ -23,7 +23,7 @@
 
       <div class="workspace">
         <header class="topbar">
-          <h1>Cooking Chart</h1>
+          <h1 id="recipe-title">タイトルなし</h1>
           <div class="controls">
             <button id="add-text" class="icon-btn" title="テキスト追加">
               <img src="/static/text_icon.png" alt="" />
