--- a/lab/cooking_chart/templates/index.html
+++ b/lab/cooking_chart/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Cooking Chart</title>
-    <link rel="stylesheet" href="/static/style.css" />
+    <link rel="stylesheet" href="static/style.css" />
   </head>
   <body>
     <div class="app-shell">
@@ -26,19 +26,19 @@
           <h1 id="recipe-title">タイトルなし</h1>
           <div class="controls">
             <button id="add-text" class="icon-btn" title="テキスト追加">
-              <img src="/static/text_icon.png" alt="" />
+              <img src="static/text_icon.png" alt="" />
               <span>テキスト追加</span>
             </button>
             <button id="add-node" class="icon-btn" title="ノード追加">
-              <img src="/static/add_node_icon.png" alt="" />
+              <img src="static/add_node_icon.png" alt="" />
               <span>ノード追加</span>
             </button>
             <button id="add-step-line" class="icon-btn" title="工程区切り線">
-              <img src="/static/line_icon.png" alt="" />
+              <img src="static/line_icon.png" alt="" />
               <span>工程区切り線</span>
             </button>
             <button id="save" class="icon-btn" title="保存">
-              <img src="/static/save_icon.png" alt="" />
+              <img src="static/save_icon.png" alt="" />
               <span>保存</span>
             </button>
           </div>
@@ -67,13 +67,13 @@
         <div class="time-badge hidden"></div>
         <div class="node-side-actions">
           <button class="delete" type="button" title="削除">
-            <img src="/static/close_icon.png" alt="" />
+            <img src="static/close_icon.png" alt="" />
           </button>
           <button class="time-switch" type="button" title="時間設定">
-            <img src="/static/time_icon.png" alt="" />
+            <img src="static/time_icon.png" alt="" />
           </button>
           <button class="color-switch" type="button" title="色変更">
-            <img src="/static/color_change_icon.png" alt="" />
+            <img src="static/color_change_icon.png" alt="" />
           </button>
         </div>
         <input class="time-input hidden" type="text" placeholder="30min" />
@@ -90,6 +90,6 @@
       </article>
     </template>
 
-    <script src="/static/app.js"></script>
+    <script src="static/app.js"></script>
   </body>
 </html>
