--- a/lab/cooking_chart/templates/cooking_chart/index.html
+++ b/lab/cooking_chart/templates/cooking_chart/index.html
@@ -12,7 +12,7 @@
         <h2>Recipes</h2>
         <div class="sidebar-actions">
           <button id="new-recipe" class="icon-only-btn" title="新規作成" aria-label="新規作成">
-            <img src="/static/new_icon.png" alt="" />
+            <img src="static/new_icon.png" alt="" />
           </button>
         </div>
         <div class="recipe-list-wrap">
