--- a/lab/cooking_chart/templates/cooking_chart/index.html
+++ b/lab/cooking_chart/templates/cooking_chart/index.html
@@ -2,10 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="{{ 'width=device-width, initial-scale=1' if editable else 'width=1280, initial-scale=1' }}"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>{{ "Recipe Edit" if editable else "Cooking Chart" }}</title>
     <link rel="stylesheet" href="static/style.css" />
   </head>
