--- a/lab/cooking_chart/templates/cooking_chart/index.html
+++ b/lab/cooking_chart/templates/cooking_chart/index.html
@@ -52,6 +52,11 @@
         </header>
 
         <main class="board-wrap" id="board-wrap">
+          <div class="zoom-controls" aria-label="zoom controls">
+            <button id="zoom-out" type="button" title="縮小">-</button>
+            <span id="zoom-level">100%</span>
+            <button id="zoom-in" type="button" title="拡大">+</button>
+          </div>
           <svg id="edges"></svg>
           <div id="board"></div>
         </main>
