--- a/lab/cooking_chart/templates/cooking_chart/index.html
+++ b/lab/cooking_chart/templates/cooking_chart/index.html
@@ -55,6 +55,12 @@
           <svg id="edges"></svg>
           <div id="board"></div>
         </main>
+        <div class="export-wrap">
+          <button id="export-image" class="icon-btn" title="画像で保存">
+            <img src="static/download_icon.png" alt="" />
+            <span>画像で保存</span>
+          </button>
+        </div>
 
         {% if editable %}
         <div class="json-toggle-wrap">
