--- a/lab/cooking_chart/templates/cooking_chart/index.html
+++ b/lab/cooking_chart/templates/cooking_chart/index.html
@@ -105,6 +105,7 @@
       </article>
     </template>
 
+    <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
     <script src="static/app.js"></script>
   </body>
 </html>
