--- a/lab/cooking_chart/templates/cooking_chart/index.html
+++ b/lab/cooking_chart/templates/cooking_chart/index.html
@@ -32,7 +32,7 @@
           <div class="topbar-actions">
             <button class="icon-btn export-inline-btn" data-export-image title="画像で保存">
               <img src="static/download_icon.png" alt="" />
-              <span>画像で保存</span>
+              <span>画像に保存</span>
             </button>
             {% if editable %}
             <div class="controls">
